delete excess folders, update nrt_raster_structure with results from cli_035

--- a/Raster Dataset Processing/Handling NetCDF.ipynb
+++ b/Raster Dataset Processing/Handling NetCDF.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -66,25 +66,72 @@
     {
      "data": {
       "text/plain": [
-       "<class 'netCDF4._netCDF4.Dataset'>\n",
-       "root group (NETCDF3_CLASSIC data model, file format NETCDF3):\n",
-       "    title: GISTEMP Surface Temperature Analysis\n",
-       "    institution: NASA Goddard Institute for Space Studies\n",
-       "    source: http://data.giss.nasa.gov/gistemp/\n",
-       "    Conventions: CF-1.6\n",
-       "    history: Created 2017-12-13 09:40:43 by SBBX_to_nc 2.0 - ILAND=250,  IOCEAN=none,     Base: 1951-1980\n",
-       "    dimensions(sizes): lat(90), lon(180), time(1655), nv(2)\n",
-       "    variables(dimensions): float32 \u001b[4mlat\u001b[0m(lat), float32 \u001b[4mlon\u001b[0m(lon), int32 \u001b[4mtime\u001b[0m(time), int32 \u001b[4mtime_bnds\u001b[0m(time,nv), int16 \u001b[4mtempanomaly\u001b[0m(time,lat,lon)\n",
-       "    groups: "
+       "'int16'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp250"
+    "str(temp250['tempanomaly'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NETCDF:\"/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc\":tempanomaly\n",
+      "ERROR 4: NETCDF:\"/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc\":tempanomaly: No such file or directory\n",
+      "gdalinfo failed - unable to open 'NETCDF:\"/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc\":tempanomaly'.\n",
+      "ERROR 4: NETCDF:/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc:tempanomaly: No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['gdalwarp', '-overwrite', '-srcnodata \"32767\"', '-t_srs EPSG:4326', '-te -180 -90 180 90', '-ot int16', '-of VRT', '-r \"bilinear\"', 'NETCDF:\"/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc\":tempanomaly', 'data.vrt']' returned non-zero exit status 1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-d590e925f94b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gdalinfo NETCDF:\\'\"\\'$file_name\\'\"\\':$var_name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gdalwarp -overwrite -srcnodata $nodata -t_srs EPSG:4326 -te -180 -90 180 90 -ot int16 -of VRT -r bilinear NETCDF:\"$file_name\":$var_name $vrt_name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreproject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.pyenv/versions/3.6.0/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36mcheck_output\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    334\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    335\u001b[0m     return run(*popenargs, stdout=PIPE, timeout=timeout, check=True,\n\u001b[0;32m--> 336\u001b[0;31m                **kwargs).stdout\n\u001b[0m\u001b[1;32m    337\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.0/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m             raise CalledProcessError(retcode, process.args,\n\u001b[0;32m--> 418\u001b[0;31m                                      output=stdout, stderr=stderr)\n\u001b[0m\u001b[1;32m    419\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mCompletedProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    420\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command '['gdalwarp', '-overwrite', '-srcnodata \"32767\"', '-t_srs EPSG:4326', '-te -180 -90 180 90', '-ot int16', '-of VRT', '-r \"bilinear\"', 'NETCDF:\"/Users/nathansuberi/Desktop/RW_Data/GISSTEMP/gistemp250.nc\":tempanomaly', 'data.vrt']' returned non-zero exit status 1."
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "var_name = 'tempanomaly'\n",
+    "file_name = local_storage + \"gistemp250.nc\"\n",
+    "sds_path = 'NETCDF:\"{nc_name}\":{var_name}'.format(nc_name=file_name, var_name=var_name)\n",
+    "vrt_name = 'data.vrt'\n",
+    "data_type = 'int16'\n",
+    "nodata_value = '32767'\n",
+    "reproject = ['gdalwarp', '-overwrite', '-srcnodata \"{}\"'.format(nodata_value), '-t_srs EPSG:4326',\n",
+    "             '-te -180 -90 180 90', '-ot {}'.format(data_type), '-of VRT', '-r \"bilinear\"',\n",
+    "             sds_path, vrt_name]\n",
+    "\n",
+    "os.environ['nodata'] = nodata_value\n",
+    "os.environ['sds_path'] = sds_path\n",
+    "os.environ['vrt_name'] = vrt_name\n",
+    "os.environ['var_name'] = var_name\n",
+    "os.environ['file_name'] = file_name\n",
+    "print(sds_path)\n",
+    "\n",
+    "!gdalinfo NETCDF:'\"'$file_name'\"':$var_name\n",
+    "!gdalwarp -overwrite -srcnodata $nodata -t_srs EPSG:4326 -te -180 -90 180 90 -ot int16 -of VRT -r bilinear NETCDF:\"$file_name\":$var_name $vrt_name\n",
+    "subprocess.check_output(reproject)"
    ]
   },
   {
