simplify script for uploading metadata to API

--- a/Metadata Management/Updating Sources - Source Orgs and Subtitles.ipynb
+++ b/Metadata Management/Updating Sources - Source Orgs and Subtitles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -78,9 +78,13 @@
     "                \n",
     "        # If official acronym exists, this runs\n",
     "        else:\n",
-    "            source_org_list.append(src + \" (\" + accronym + \")\")\n",
-    "            subtitles_list.append(accronym)\n",
-    "                \n",
+    "            if not isinstance(accronym, float):\n",
+    "                source_org_list.append(src + \" (\" + accronym + \")\")\n",
+    "                subtitles_list.append(accronym)\n",
+    "            else:\n",
+    "                source_org_list.append(src)\n",
+    "                subtitles_list.append(src)\n",
+    "\n",
     "    # strip brackets, replace with /\n",
     "    clean_sources = list_to_string(source_org_list)\n",
     "    clean_subtitles = list_to_string(subtitles_list)\n",
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -107,14 +111,79 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  565k    0  565k    0     0   166k      0 --:--:--  0:00:03 --:--:--  166k\n",
+      "100  705k    0  705k    0     0  1227k      0 --:--:-- --:--:-- --:--:-- 1227k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 14426    0 14426    0     0  23293      0 --:--:-- --:--:-- --:--:-- 23305\n",
+      "100 14332    0 14332    0     0  44075      0 --:--:-- --:--:-- --:--:-- 44098\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 91056    0 91056    0     0   229k      0 --:--:-- --:--:-- --:--:--  230k\n",
-      "Need to adjust anything with:  []\n"
+      "100   97k    0   97k    0     0   292k      0 --:--:-- --:--:-- --:--:--  293k\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "accronym not yet assigned\n",
+      "Need to adjust anything with:  ['' 'Alpen Adria University Institute of Socail Ecology' 'Deltares'\n",
+      " 'European Union Joint Research Centre' 'Food and Agriculture Organization'\n",
+      " 'Geospatial Information Authority of Japan' 'Germanwatch e.V.'\n",
+      " 'Google Earth' 'Google Maps'\n",
+      " 'International Fertilizer Industry Association' 'Malaria Atlas Project'\n",
+      " 'National Aeronautic and Space Agency'\n",
+      " 'National Aeronautic and Space Agency Goddard Institute for Space Studies'\n",
+      " 'National Atmospheric and Oceanic Administration' 'OpenStreet Map'\n",
+      " 'The Hague Centre For Strategic Studies'\n",
+      " 'Twente Water Centre at the University of Twente'\n",
+      " 'US Army Research Institute of Environmental Medicine'\n",
+      " 'US Geological Survey'\n",
+      " 'United Nations Educational, Scientific and Cultural Organization Institute for Statistics'\n",
+      " 'United States Department of Agriculture Foreign Agricultural Service'\n",
+      " 'United States Department of Agriculture Foreign Agricultural Service Office of Global Analysis International Production Assessment Division'\n",
+      " 'United States Department of Agriculture National Agriculture Statistics Service'\n",
+      " 'United States Department of Agriculture World Agricultural Outlook Board Office of the Chief Economist'\n",
+      " 'United States Environmental Protection Agency Office of Water'\n",
+      " 'University College of London Institute for Sustainable Resources'\n",
+      " \"University of Wisconsin-Madison's Center for Sustainability and the Global Environment\"\n",
+      " 'Utretch University Earth Surface Hydrology' 'Word Bank Group'\n",
+      " 'World Bank' 'World Conservation Monitoring Centre'\n",
+      " 'World Resource Institute' 'd33587b6aee248faa2f388aaac96f92c_0'\n",
+      " 'data.globalforestwatch.org' 'datasets' 'http:']\n"
      ]
     }
    ],
@@ -129,7 +198,6 @@
     "# Metadata to Upload\n",
     "!curl \"https://docs.google.com/spreadsheets/d/1UkABgMlBIinJjITa6WepFAL-8VBkulS0LCbKojRXjVY/export?format=tsv\" > current_metadata.tsv\n",
     "current_mdata = pd.read_csv(os.getcwd()+\"/current_metadata.tsv\", sep=\"\\t\", index_col=[0])\n",
-    "current_mdata = current_mdata.transpose().set_index(\"Unique ID\")\n",
     "\n",
     "# Official Names\n",
     "!curl \"https://docs.google.com/spreadsheets/d/1ijQrjYv-mxtmoDHxv0S1XlfRed6IbYcviRW_HY7GAh8/export?format=tsv\" > official_names.tsv\n",
@@ -145,7 +213,7 @@
     "# Have to make a copy to a\n",
     "dummy = current_mdata.copy()\n",
     "last = dummy.shape[0]\n",
-    "# Remove the last line which is typically\n",
+    "# Remove the last line which is typically empty\n",
     "# print(dummy.tail(5))\n",
     "dummy = dummy.iloc[0:last-1]\n",
     "\n",
@@ -154,6 +222,17 @@
     "new_df = dummy.apply(lambda row: update_source_info(row), axis=1)\n",
     "\n",
     "print(\"Need to adjust anything with: \", np.unique(need_to_be_added))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "current_mdata.loc[current_mdata['np.unique(need_to_be_added)"
    ]
   },
   {
