updating for long form and geometry matching

--- a/Metadata Management/Comparing between data tracking sheets and back office.ipynb
+++ b/Metadata Management/Comparing between data tracking sheets and back office.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -131,11 +131,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "291 datasets on the api\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [098b33df-6871-4e53-a5ff-b56a7d989f9a]\n",
-      "\n"
+      "Index(['attributes', 'id', 'type'], dtype='object')\n",
+      "292 datasets on the api\n",
+      "                                                          Public Title  \\\n",
+      "id                                                                       \n",
+      "098b33df-6871-4e53-a5ff-b56a7d989f9a  Subnational Political Boundaries   \n",
+      "\n",
+      "                                                                                   Slug  \n",
+      "id                                                                                       \n",
+      "098b33df-6871-4e53-a5ff-b56a7d989f9a  Politcial-Boundaries-GADM-adminitrative-level-...  \n"
      ]
     }
    ],
@@ -148,10 +152,27 @@
     "\n",
     "# Request all datasets, and extract the data from the response\n",
     "res = req.get(url, params=payload)\n",
-    "api_datasets = pd.DataFrame(pd.DataFrame(res.json()[\"data\"])['id']).set_index('id')\n",
+    "df = pd.DataFrame(res.json()[\"data\"])\n",
+    "print(df.columns)\n",
+    "\n",
+    "for ix, row in df.iterrows():\n",
+    "    df.loc[ix,'Public Title'] = row['attributes']['name']\n",
+    "    df.loc[ix,'Slug'] = row['attributes']['slug']\n",
+    "\n",
+    "api_datasets = df.set_index('id')[['Public Title', 'Slug']]\n",
     "print(api_datasets.shape[0], 'datasets on the api')\n",
-    "print(api_datasets.head(1))\n",
-    "print()"
+    "print(api_datasets.head(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "api_datasets.to_csv('/Users/nathansuberi/Desktop/backoffice_names_for_elise.csv')"
    ]
   },
   {
