--- a/Metadata Management/To Long Form.ipynb
+++ b/Metadata Management/To Long Form.ipynb
@@ -1602,9 +1602,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 155,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
       "      dtype='object')\n",
       "INFO:root:processing cli_029_vulnerability_to_cc\n",
       "INFO:root:options:\n",
-      "INFO:root:{'_incl': True, 'add_ind': True, 'prefixes': ['gain', 'readiness', 'vulnerability'], 'country_code': 'iso4', 'country_name': 'country', 'id_cols': ['country']}\n",
+      "INFO:root:{'_incl': True, 'add_ind': True, 'prefixes': ['gain', 'readiness', 'vulnerability'], 'country_code': False, 'country_name': 'country', 'id_cols': ['country']}\n",
       "INFO:root:initial shape: (192, 67)\n",
       "INFO:root:\n",
       "INFO:root:final shape of cli_029_vulnerability_to_cc: (4032, 5)\n",
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -4347,7 +4347,7 @@
     "        ### Use the names now checked for to assign a c_code column\n",
     "        ### THIS IS THE ONLY PLACE DATA IS ALTERED\n",
     "        # If there was no c_code, there must be a c_name\n",
-    "        data['country_code'] = match_iso_to_name(data[c_name], aliases, 'alias')\n",
+    "        data['new_country_code'] = match_iso_to_name(data[c_name], aliases, 'alias')\n",
     "        \n",
     "    ### BEFORE HERE, ensure data has the updated geometry column attached\n",
     "    tables[name]['long_data'] = data\n"
@@ -4355,7 +4355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -4374,12 +4374,12 @@
       "3     Liberia     2013                        1 448 [1 144 - 1 752]   \n",
       "4    Maldives     2013                                           12   \n",
       "\n",
-      "  country_code  \n",
-      "0          ***  \n",
-      "1          ***  \n",
-      "2          ***  \n",
-      "3          ***  \n",
-      "4          ***  \n",
+      "  new_country_code  \n",
+      "0              ***  \n",
+      "1              ***  \n",
+      "2              ***  \n",
+      "3              ***  \n",
+      "4              ***  \n",
       "INFO:root:saved cit_022_road_traffic_deaths_by_country long data to s3\n",
       "/Users/nathansuberi/.pyenv/versions/3.6.0/lib/python3.6/site-packages/cartoframes/context.py:511: UserWarning: DataFrame written to CARTO but the table schema failed to update to match DataFrame. All columns in CARTO table have data type `text`. CARTO error: `['syntax error at end of input']`.\n",
       "  query=alter_query))\n",
@@ -4443,12 +4443,12 @@
       "INFO:root:saved cit_028_percent_urban_slums_edit long data to s3\n",
       "INFO:root:saved cit_028_percent_urban_slums_edit long data to Carto\n",
       "INFO:root:cit_029_municipal_waste\n",
-      "INFO:root:   _2012_2015_avg          country datetime  yr_data country_code\n",
-      "0      522.890000          Iceland     1990      NaN          ***\n",
-      "1      587.203000          Ireland     1990      NaN          ***\n",
-      "2      448.354667         Portugal     1990  300.504          ***\n",
-      "3      314.840750  Slovak Republic     1990      NaN          SVK\n",
-      "4      414.217000         Slovenia     1990      NaN          ***\n",
+      "INFO:root:   _2012_2015_avg          country datetime  yr_data new_country_code\n",
+      "0      522.890000          Iceland     1990      NaN              ***\n",
+      "1      587.203000          Ireland     1990      NaN              ***\n",
+      "2      448.354667         Portugal     1990  300.504              ***\n",
+      "3      314.840750  Slovak Republic     1990      NaN              SVK\n",
+      "4      414.217000         Slovenia     1990      NaN              ***\n",
       "INFO:root:saved cit_029_municipal_waste long data to s3\n"
      ]
     },
@@ -4523,12 +4523,12 @@
       "INFO:root:saved com_010_gdp_ppp_usd long data to s3\n",
       "INFO:root:saved com_010_gdp_ppp_usd long data to Carto\n",
       "INFO:root:com_015_recycling_rates\n",
-      "INFO:root:   _2012_2015_avg      country datetime  yr_data country_code\n",
-      "0         2100.00       Mexico     1990      NaN          ***\n",
-      "1         2149.75  Netherlands     1990      NaN          ***\n",
-      "2          587.25       Norway     1990    100.0          ***\n",
-      "3         1947.50       Poland     1990      NaN          ***\n",
-      "4         3620.00        Spain     1990      NaN          ***\n",
+      "INFO:root:   _2012_2015_avg      country datetime  yr_data new_country_code\n",
+      "0         2100.00       Mexico     1990      NaN              ***\n",
+      "1         2149.75  Netherlands     1990      NaN              ***\n",
+      "2          587.25       Norway     1990    100.0              ***\n",
+      "3         1947.50       Poland     1990      NaN              ***\n",
+      "4         3620.00        Spain     1990      NaN              ***\n",
       "INFO:root:saved com_015_recycling_rates long data to s3\n"
      ]
     },
@@ -4615,7 +4615,8 @@
       "1  Access to clean fuels and technologies for coo...     2000  22.666341  \n",
       "2  Access to clean fuels and technologies for coo...     2000  48.022336  \n",
       "3  Access to clean fuels and technologies for coo...     2000  93.082431  \n",
-      "4  Access to clean fuels and technologies for coo...     2000  10.548800  \n"
+      "4  Access to clean fuels and technologies for coo...     2000  10.548800  \n",
+      "INFO:root:saved ene_028_access_clean_cooking_fuels long data to s3\n"
      ]
     },
     {
@@ -4629,15 +4630,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:saved ene_028_access_clean_cooking_fuels long data to s3\n",
       "INFO:root:saved ene_028_access_clean_cooking_fuels long data to Carto\n",
       "INFO:root:foo_015_global_hunger_index\n",
-      "INFO:root:        country datetime  ghi_data country_code\n",
-      "0         Ghana     1992      41.9          ***\n",
-      "1        Guinea     1992      46.5          ***\n",
-      "2  GuineaBissau     1992      44.5          ***\n",
-      "3          Iraq     1992      21.8          ***\n",
-      "4        Guyana     1992      22.3          ***\n",
+      "INFO:root:        country datetime  ghi_data new_country_code\n",
+      "0         Ghana     1992      41.9              ***\n",
+      "1        Guinea     1992      46.5              ***\n",
+      "2  GuineaBissau     1992      44.5              ***\n",
+      "3          Iraq     1992      21.8              ***\n",
+      "4        Guyana     1992      22.3              ***\n",
       "INFO:root:saved foo_015_global_hunger_index long data to s3\n"
      ]
     },
@@ -4661,12 +4661,12 @@
       "3         INDONESIA          __2016_2050    0.677371    0.666611    0.594091   \n",
       "4             ITALY          __2016_2050    0.253508    0.229789    0.255898   \n",
       "\n",
-      "  country_code  \n",
-      "0          ***  \n",
-      "1          ***  \n",
-      "2          ***  \n",
-      "3          ***  \n",
-      "4          ***  \n",
+      "  new_country_code  \n",
+      "0              ***  \n",
+      "1              ***  \n",
+      "2              ***  \n",
+      "3              ***  \n",
+      "4              ***  \n",
       "INFO:root:saved foo_040_fisheries_vuln_climat long data to s3\n"
      ]
     },
@@ -4713,12 +4713,19 @@
       "INFO:root:saved foo_43_agriculture_value_added long data to Carto\n",
       "INFO:root:soc_004_human_development_index\n",
       "INFO:root:soc_006_multidimensional_poverty_index\n",
-      "INFO:root:                             country  latest datetime  yr_data country_code\n",
-      "0                            Belarus   0.001     2005    0.001          ***\n",
-      "1                         Bangladesh   0.188     2005      NaN          ***\n",
-      "2   Bolivia (Plurinational State of)   0.097     2005      NaN          ***\n",
-      "3                               Chad   0.545     2005      NaN          ***\n",
-      "4             Bosnia and Herzegovina   0.006     2005      NaN          ***\n",
+      "INFO:root:                             country  latest datetime  yr_data  \\\n",
+      "0                            Belarus   0.001     2005    0.001   \n",
+      "1                         Bangladesh   0.188     2005      NaN   \n",
+      "2   Bolivia (Plurinational State of)   0.097     2005      NaN   \n",
+      "3                               Chad   0.545     2005      NaN   \n",
+      "4             Bosnia and Herzegovina   0.006     2005      NaN   \n",
+      "\n",
+      "  new_country_code  \n",
+      "0              ***  \n",
+      "1              ***  \n",
+      "2              ***  \n",
+      "3              ***  \n",
+      "4              ***  \n",
       "INFO:root:saved soc_006_multidimensional_poverty_index long data to s3\n"
      ]
     },
@@ -4822,12 +4829,12 @@
       "INFO:root:saved soc_020_gini long data to s3\n",
       "INFO:root:saved soc_020_gini long data to Carto\n",
       "INFO:root:soc_025_gender_inequality_index\n",
-      "INFO:root:      country datetime  yr_data country_code\n",
-      "0    Honduras     1995      NaN          ***\n",
-      "1     Georgia     1995    0.426          ***\n",
-      "2       Libya     1995      NaN          ***\n",
-      "3   Singapore     1995    0.252          ***\n",
-      "4    Suriname     1995      NaN          ***\n",
+      "INFO:root:      country datetime  yr_data new_country_code\n",
+      "0    Honduras     1995      NaN              ***\n",
+      "1     Georgia     1995    0.426              ***\n",
+      "2       Libya     1995      NaN              ***\n",
+      "3   Singapore     1995    0.252              ***\n",
+      "4    Suriname     1995      NaN              ***\n",
       "INFO:root:saved soc_025_gender_inequality_index long data to s3\n"
      ]
     },
@@ -4909,12 +4916,12 @@
       "INFO:root:saved soc_036_life_expectancy_at_birth long data to s3\n",
       "INFO:root:saved soc_036_life_expectancy_at_birth long data to Carto\n",
       "INFO:root:soc_039_out_of_school_rate_edit\n",
-      "INFO:root:       country datetime  yr_data country_code\n",
-      "0    Macedonia     1999  4.95965          ***\n",
-      "1        Libya     1999      NaN          ***\n",
-      "2      Somalia     1999      NaN          ***\n",
-      "3      Andorra     1999      NaN          ***\n",
-      "4  Afghanistan     1999      NaN          ***\n"
+      "INFO:root:       country datetime  yr_data new_country_code\n",
+      "0    Macedonia     1999  4.95965              ***\n",
+      "1        Libya     1999      NaN              ***\n",
+      "2      Somalia     1999      NaN              ***\n",
+      "3      Andorra     1999      NaN              ***\n",
+      "4  Afghanistan     1999      NaN              ***\n"
      ]
     },
     {
@@ -4982,12 +4989,12 @@
       "3          Nauru     1995        NaN             NaN                 NaN   \n",
       "4     San Marino     1995        NaN             NaN                 NaN   \n",
       "\n",
-      "  country_code  \n",
-      "0          ***  \n",
-      "1          ***  \n",
-      "2          ***  \n",
-      "3          ***  \n",
-      "4          ***  \n"
+      "  new_country_code  \n",
+      "0              ***  \n",
+      "1              ***  \n",
+      "2              ***  \n",
+      "3              ***  \n",
+      "4              ***  \n"
      ]
     },
     {
@@ -5025,27 +5032,6 @@
     "            logging.info('saved ' + name + ' long data to Carto')\n",
     "            #logging.info('failed to write table ' + name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'ResourceWatchCode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-152-087f93c2a963>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ResourceWatchCode'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'ResourceWatchCode'"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
